--- a/conclussions.tex
+++ b/conclussions.tex
@@ -1,19 +1,6 @@
-\chapter{Conclusiones}
-\label{chapter:conclusiones}
+\section{Conclusiones}
+\label{sec:conclusiones}
 
-\begin{flushright}
-\itshape{Where you start is not as important as where you finish.} \\
-
-\texttt{Zig Ziglar}
-\end{flushright}
-\minitoc
-%\newpage
-
-A lo largo de los últimos 30 años han sido propuestos innumerables modelos para representar \SPLs. 
-Sin embargo, el análisis formal y automático de los modelos de variabilidad sigue siendo un desafío, donde dependiendo de la información 
-que sea necesario generar, los investigadores se encuentran con problemas combinatorios complejos de resolver en \emph{tiempo y espacio}.
-Este trabajo de investigación propone y muestra un formalismo matemático capaz de definir modelos de variabilidad lo suficientemente
-flexibles como para poder ser aplicados a otros modelos, ya que su aplicación no se basa exclusivamente en las reglas de \FODA. Además, se muestran distintas extensiones e implementaciones que permitirán generar información útil para la toma de decisiones.
  
 
 
@@ -22,5 +9,5 @@ flexibles como para poder ser aplicados a otros modelos, ya que su aplicación n
 
 %%% Local Variables: 
 %%% mode: latex
-%%% TeX-master: "../main"
+%%% TeX-master: "main"
 %%% End: 
