--- a/introduction.tex
+++ b/introduction.tex
@@ -247,6 +247,7 @@ minimum cost unit, and therefore, any cost can be represented as a multiple of t
 
 \begin{itemize}
 \item Hablar de las probabilidades en métodos formales.
+\item Carlos debe buscar alguna referencia de SPL con probabilidades
 \item Las probabilidades ayudan en los SPL. Por ejemplo en testing
   se pueden comprobar con mayor fiabilidad los productos o componentes
   que aparecen con mayor probabilidad.
