--- a/operational.tex
+++ b/operational.tex
@@ -106,13 +106,13 @@ representar probabilidades en el modelo.
   si puede ser deducida de las reglas descritas en la figura~\ref{fig:sos-rules-p}.  
 \edfn
 
-\todo{Hay que explicar despacio las cosas}
 
 
 
 
 
-\todo{explicar los lemas y poner más texto}
+
+\todo{explicar los lemas y decir que la demostración es trivial}
 \blem\label{lem:prob}
   Dados los términos $P,\ Q\in\fodaPA$, 
   \begin{itemize}
