--- a/testing.tex
+++ b/testing.tex
@@ -45,7 +45,7 @@ características que conforman el producto.
 \begin{figure}[h]
         \centering
         \linefigure
-        \includegraphics[width=0.8\hsize,angle=0]{chapters/jstat/plot_probs_times.eps}
+        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_times.eps}
         \linefigure
         \caption{Tiempo de procesamiento para un modelo con 1500 características}\label{fig:plot:probs:times}
 \end{figure}
@@ -76,7 +76,7 @@ en la banda superior entre 20 y 38 milisegundos.
 \begin{figure}[h]
         \centering
         \linefigure
-        \includegraphics[width=0.8\hsize,angle=0]{chapters/jstat/plot_probs_probs.eps}
+        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs.eps}
         \linefigure
         \caption{Cálculo de las probabilidades para un modelo de variabilidad de 1500 características}\label{fig:plot:probs:probs}
 \end{figure}
@@ -92,7 +92,7 @@ claramente agrupaciones de características con mayor probabilidad.
 \begin{figure}[h]
         \centering
         \linefigure
-        \includegraphics[width=0.8\hsize,angle=0]{chapters/jstat/plot_probs_probs_sorted.eps}
+        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_probs_sorted.eps}
         \linefigure
         \caption{Cálculo de las probabilidades para un modelo de variabilidad de 1500 características ordenadas decrecientement}\label{fig:plot:probs:probs:sorted}
 \end{figure}
